...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_dark"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/collectors_title"
            app:titleTextColor="@color/text_primary"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/text_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_collectors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

...
