...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/albumFragment"
        android:icon="@drawable/ic_album"
        android:title="Álbumes" />
    <item
        android:id="@+id/collectorFragment"
        android:icon="@drawable/ic_collector"
        android:title="Coleccionistas" />
    <item
        android:id="@+id/musicianFragment"
        android:icon="@drawable/ic_musician"
        android:title="Artistas" />
</menu>

